[project]
name = "ah_swapface"
version = "1.0.3"
description = "Face swapping plugin using insightface"
dependencies = [
    "onnxruntime",
    "torch",
    "opencv-python",
    "pillow",
    "numpy~=2.0.0",
    "nanoid",
    "scipy",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
