[project]
name = "ah_swapface"
version = "1.0.3"
description = "Face swapping plugin using insightface"
dependencies = [
    "onnxruntime",
    "torch==0.4.1",
    "opencv-python",
    "pillow",
    "numpy==1.26.3"
    "nanoid",
    "scipy",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
