[project]
name = "ah_swapface"
version = "1.0.3"
description = "Face swapping plugin using insightface"
dependencies = [
    "onnxruntime",
    "torch==1.13.1",
    "opencv-python",
    "pillow",
    "insightface",
    "numpy==1.26.3",
    "nanoid",
    "scipy",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
